commented out body overflow: auto !important; from _base.scss to prevent double scrollbars in MS Windows browsers.

--- a/ui/scss/project/_base.scss
+++ b/ui/scss/project/_base.scss
@@ -16,7 +16,7 @@ body {
 html,
 body {
   height: 100%;
-  overflow: auto !important;
+  // overflow: auto !important;
 }
 
 body,
